fix(ToastNotification): adjust alignments to the spacing and size

--- a/src/components/ToastNotification/ToastNotification.module.css
+++ b/src/components/ToastNotification/ToastNotification.module.css
@@ -6,14 +6,14 @@
 
 .toast {
   width: 100%;
-  max-width: 24rem;
+  max-width: calc(var(--eds-spacing-size-48) * 1px);
   display: flex;
   gap: calc(var(--eds-spacing-size-2) * 1px);
   padding: calc(var(--eds-spacing-size-2) * 1px);
   align-items: top;
 
   border: calc(var(--eds-spacing-size-quarter) * 1px) solid;
-  border-left: calc(var(--eds-spacing-size-quarter) * 1px) solid;
+  border-left: calc(var(--eds-spacing-size-2) * 1px) solid;
   border-radius: calc(var(--eds-theme-border-radius-objects-sm) * 1px);
 
 
